...
import androidx.compose.ui.viewinterop.AndroidView
import com.atenea.dameals.R
import com.atenea.dameals.components.CheckAVSComponent
import com.atenea.dameals.presentation.favoritemeallist.ui.theme.Red
import com.atenea.dameals.presentation.favoritemeallist.ui.theme.Typography

const val LOGIN_TEXT_FIELD_USER = "LOGIN_TEXT_FIELD_USER"
const val LOGIN_TEXT_FIELD_PASSWORD = "LOGIN_TEXT_FIELD_PASSWORD"

@Composable
fun LoginScreen(
    onLoginSuccess: () -> Unit,
    onLoginFail: () -> Unit
) {
...
