<resources>
    <string name="app_name">DaMeals</string>
    <string name="da_meals_title">Da Meals</string>
    <string name="meal_name">Meal Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingredients">%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s
    </string>
    <string name="measures">%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s
    </string>
    <string name="title_activity_favorite_list_screen">FavoriteMealListScreen</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="checkbox">Done Checkbox</string>
    <string name="meal_image">Meal image</string>
    <string name="boton_de_favorito">Botón de favorito</string>
    <string name="error">Error</string>
    <string name="recargar">Recargar</string>
    <string name="login">Login</string>
    <string name="user">User</string>
    <string name="description">description</string>
    <string name="search">Search</string>
</resources>